WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258741
REGRESSION (
263995@main
): preventDefault on wheel events can still result in page scrolling (fast/scrolling/mac/event-region-prevent-default-with-sublayer.html is a consistent failure)
https://bugs.webkit.org/show_bug.cgi?id=258741
Summary
REGRESSION (263995@main): preventDefault on wheel events can still result in ...
Simon Fraser (smfr)
Reported
2023-06-30 10:33:33 PDT
After
263995@main
, if the page calls preventDefault() on the first wheel event, we'd still think the page was just unresponsive, and convert the synchronous wheel event sequent into an async one. This resulted in scrolling jiggles on pages with embedded maps that wanted to consume the wheel events for scrolling.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2023-06-30 10:33:46 PDT
<
rdar://111420041
>
Simon Fraser (smfr)
Comment 2
2023-06-30 10:43:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15458
EWS
Comment 3
2023-07-05 14:25:03 PDT
Committed
265781@main
(bdb0943f3930): <
https://commits.webkit.org/265781@main
> Reviewed commits have been landed. Closing PR #15458 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug